--- a/zadanieUI/DetailController/Base.lproj/DetailViewController.storyboard
+++ b/zadanieUI/DetailController/Base.lproj/DetailViewController.storyboard
@@ -24,37 +24,37 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[date]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wL5-EA-vws">
-                                            <rect key="frame" x="16" y="16" width="382" height="21"/>
+                                            <rect key="frame" x="16" y="16" width="382" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[temp]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IP1-bj-Ac3">
-                                            <rect key="frame" x="16" y="113" width="382" height="77"/>
+                                            <rect key="frame" x="16" y="112.5" width="382" height="76.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="64"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="NLV-jF-VIh">
-                                            <rect key="frame" x="16" y="54" width="19.5" height="18.5"/>
+                                            <rect key="frame" x="16" y="53.5" width="19.5" height="18.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="19.5" id="UYt-Dr-BnL"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[char_weather]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PeG-ge-HMh">
-                                            <rect key="frame" x="16" y="222" width="382" height="39"/>
+                                            <rect key="frame" x="16" y="221" width="382" height="38.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[location]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bal-tf-PoI">
-                                            <rect key="frame" x="51.5" y="53" width="346.5" height="20"/>
+                                            <rect key="frame" x="51.5" y="52.5" width="346.5" height="20"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[feels_like]" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7KT-Xb-eG8">
-                                            <rect key="frame" x="16" y="277" width="382" height="21"/>
+                                            <rect key="frame" x="16" y="275.5" width="382" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -83,15 +83,62 @@
                                         <constraint firstItem="PeG-ge-HMh" firstAttribute="leading" secondItem="RUb-km-VNi" secondAttribute="leading" constant="16" id="yNV-Y7-TuA"/>
                                     </constraints>
                                 </view>
+                                <activityIndicatorView key="tableFooterView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" id="iQh-Kg-UvJ">
+                                    <rect key="frame" x="0.0" y="337" width="414" height="20"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </activityIndicatorView>
                             </tableView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UOk-Us-hsM">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Ydo-33-kMZ">
+                                        <rect key="frame" x="120" y="250" width="174" height="225"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="249" ambiguous="YES" image="umbrella.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZzI-3W-IoN">
+                                                <rect key="frame" x="0.0" y="-1.5" width="174" height="132.5"/>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Msl-9L-zKJ">
+                                                <rect key="frame" x="0.0" y="130" width="174" height="35"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5np-g3-K25">
+                                                <rect key="frame" x="0.0" y="165" width="174" height="60"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Refersh" buttonSize="large">
+                                                    <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="reload:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bdo-at-ha8"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Ydo-33-kMZ" secondAttribute="trailing" constant="120" id="2Wb-OY-4Kv"/>
+                                    <constraint firstItem="Ydo-33-kMZ" firstAttribute="top" secondItem="UOk-Us-hsM" secondAttribute="top" constant="250" id="Bp7-3s-6am"/>
+                                    <constraint firstItem="Ydo-33-kMZ" firstAttribute="leading" secondItem="UOk-Us-hsM" secondAttribute="leading" constant="120" id="Ci0-RP-U35"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ydo-33-kMZ" secondAttribute="bottom" constant="250" id="Stn-lR-9Km"/>
+                                    <constraint firstItem="Ydo-33-kMZ" firstAttribute="centerX" secondItem="UOk-Us-hsM" secondAttribute="centerX" id="gWe-BY-eeB"/>
+                                    <constraint firstItem="Ydo-33-kMZ" firstAttribute="centerY" secondItem="UOk-Us-hsM" secondAttribute="centerY" id="ooI-dm-Ygb"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="UOk-Us-hsM" secondAttribute="bottom" id="AK2-U9-Eh8"/>
                             <constraint firstAttribute="bottom" secondItem="evY-kq-egd" secondAttribute="bottom" id="JZQ-hc-AH2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="evY-kq-egd" secondAttribute="trailing" id="WNa-i9-18g"/>
+                            <constraint firstItem="UOk-Us-hsM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cdr-vD-aqc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UOk-Us-hsM" secondAttribute="trailing" id="gsU-G5-rGw"/>
                             <constraint firstItem="evY-kq-egd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="juZ-D1-Ujx"/>
                             <constraint firstItem="evY-kq-egd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="3" id="szG-l9-cCj"/>
+                            <constraint firstItem="UOk-Us-hsM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="z21-la-8h0"/>
+                            <constraint firstItem="UOk-Us-hsM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zI0-Sm-vqX"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Location" image="location.fill" catalog="system" id="TC8-ku-NZW"/>
@@ -105,8 +152,11 @@
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="iQh-Kg-UvJ" id="bKu-NE-EYu"/>
                         <outlet property="dateLabel" destination="wL5-EA-vws" id="OA7-kh-ZJs"/>
                         <outlet property="descWeatherLabel" destination="PeG-ge-HMh" id="tPq-zD-atM"/>
+                        <outlet property="emptyView" destination="UOk-Us-hsM" id="c0m-Pm-d34"/>
+                        <outlet property="errorLabel" destination="Msl-9L-zKJ" id="lVp-MD-0Ki"/>
                         <outlet property="feelTemptLabel" destination="7KT-Xb-eG8" id="PSK-wi-L57"/>
                         <outlet property="locatIcony" destination="NLV-jF-VIh" id="FMB-LJ-MTx"/>
                         <outlet property="locationLabel" destination="Bal-tf-PoI" id="zLh-hv-c9c"/>
@@ -137,6 +187,7 @@
     </scenes>
     <resources>
         <image name="location.fill" catalog="system" width="128" height="121"/>
+        <image name="umbrella.fill" catalog="system" width="122" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
